<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_recycler"
    android:name="es.ulpgc.eite.clean.mvp.masterdetail.ItemListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context="es.ulpgc.eite.clean.mvp.sample.listToDoMaster.ListToDoViewMaster"
    android:longClickable="true"

    tools:listitem="@layout/item_list"/>


