<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:background="@drawable/background"

    >

    <ImageView
        android:id="@+id/color_subject"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/bg_controll_plane" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:text="Titulo"
        android:textAppearance="?attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripcion de la tarea"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/title" />

</RelativeLayout>